--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
 .this-website.is-awesome {
     font-size: 48px;
     font-weight: 900;
+    display: flex;
+    flex-wrap: wrap;
+    width: 40%;
 }
 
 .logo {
@@ -46,13 +49,15 @@ a {
     background-color: #3882f6;
     border-radius: 20%;
     cursor: pointer;
-    padding: 7px 20px 7px 20px;
+    margin-left: 10px;
+    max-width: 100px;
+    flex-shrink: 0;
 }
 
 .top-placeholder {
     background-color: darkgray;
-    width: 400px;
-    height: 200px;
+    width: 500px;
+    height: 250px;
     font-size: 18px;
     display: flex;
     align-items: center;
@@ -67,4 +72,45 @@ a {
 .container-top {
     display: flex;
     justify-content: center;
+    padding-bottom: 100px;
+}
+.this-website.has {
+    display: flex;
+    width: 53%;
+}
+
+.top-middle {
+    padding-top: 60px;
+}
+
+.this-website {
+    padding-left: 10px; 
+    gap: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.body-one {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.subtexts,
+.box,
+.boxes {
+    display: flex;
+}
+
+.box {
+    height: 150px;
+    width: 150px;
+    background-color: white;
+    border: solid #3882f6;
+    border-radius: 10%;
+}
+
+.boxes {
+    gap: 20px;
 }
