--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ body {
 
 .logo {
     font-size: 24px;
+    padding-top: 10px;
+    font-weight: 900;
 }
 
 .this-website.has,
@@ -62,6 +64,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-right: 23px;
 }
 
 .header {
@@ -88,6 +91,7 @@ a {
     gap: 15px;
     display: flex;
     flex-direction: column;
+    width: 41%;
 }
 
 .body-one {
